--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@docsearch/website",
-  "version": "1.0.0",
+  "version": "3.0.0-alpha.32",
   "private": true,
   "homepage": "https://docsearch.algolia.com/",
   "scripts": {
@@ -24,20 +24,20 @@
     "image-webpack-loader": "6.0.0",
     "imagemin": "7.0.0",
     "my-loaders": "file:plugins/my-loaders",
-    "tailwind-loader": "file:plugins/tailwind-loader",
+    "postcss-import": "12.0.0",
     "prism-react-renderer": "1.1.0",
     "query-string": "6.9.0",
     "react-autosuggest": "9.4.3",
     "react-live": "2.2.2",
+    "tailwind-loader": "file:plugins/tailwind-loader",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "textlint": "11.3.1",
     "textlint-rule-alex": "1.3.1",
     "textlint-rule-common-misspellings": "1.0.1",
     "textlint-rule-en-capitalization": "2.0.2",
     "textlint-rule-stop-words": "1.0.17",
     "textlint-rule-terminology": "1.1.30",
-    "textlint-rule-write-good": "1.6.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "postcss-import": "12.0.0"
+    "textlint-rule-write-good": "1.6.2"
   },
   "browserslist": {
     "production": [
