--- a/packages/docsearch-react/package.json
+++ b/packages/docsearch-react/package.json
@@ -9,6 +9,7 @@
     "name": "Algolia, Inc.",
     "url": "https://www.algolia.com"
   },
+  "sideEffects": false,
   "files": [
     "dist/",
     "style/",
