--- a/packages/docsearch-react/package.json
+++ b/packages/docsearch-react/package.json
@@ -34,8 +34,8 @@
     "watch": "watch \"yarn on:change\" --ignoreDirectoryPattern \"/dist/\""
   },
   "dependencies": {
-    "@algolia/autocomplete-core": "^1.0.0-alpha.35",
-    "@algolia/autocomplete-preset-algolia": "^1.0.0-alpha.35",
+    "@algolia/autocomplete-core": "1.0.0-alpha.44",
+    "@algolia/autocomplete-preset-algolia": "1.0.0-alpha.44",
     "@docsearch/css": "3.0.0-alpha.33",
     "algoliasearch": "^4.0.0"
   },
