--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "packages/*"
+      "packages/*",
+      "examples/*"
     ],
     "nohoist": [
       "**/html-minifier-terser"
@@ -26,6 +27,8 @@
     "lint:css": "stylelint **/src/**/*.css",
     "lint": "eslint --ext .js,.ts,.tsx .",
     "prepare": "lerna run prepare",
+    "playground:start": "yarn workspace @docsearch/react-example start",
+    "playground-js:start": "yarn workspace @docsearch/js-example start",
     "release": "shipjs prepare",
     "start": "yarn run watch",
     "test:size": "bundlesize",
@@ -53,7 +56,7 @@
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "2.19.0",
     "@typescript-eslint/parser": "2.19.0",
-    "algoliasearch": "4.8.0",
+    "algoliasearch": "4.10.3",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.1.0",
     "babel-plugin-inline-replace-variables": "1.3.1",
@@ -76,11 +79,11 @@
     "eslint-plugin-react-hooks": "2.3.0",
     "jest": "26.4.2",
     "jest-watch-typeahead": "0.6.0",
-    "lerna": "3.22.1",
+    "lerna": "4.0.0",
     "postcss": "7.0.32",
     "prettier": "2.1.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "rimraf": "3.0.2",
     "rollup": "1.31.0",
     "rollup-plugin-babel": "4.4.0",
