--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -20,22 +20,22 @@
     "@docsearch/react": "3.0.0-alpha.40",
     "@docusaurus/core": "2.0.0-beta.6",
     "@docusaurus/preset-classic": "2.0.0-beta.6",
-    "@mdx-js/react": "^1.6.21",
-    "@svgr/webpack": "^5.5.0",
-    "clsx": "^1.1.1",
-    "file-loader": "^6.2.0",
+    "@mdx-js/react": "1.6.22",
+    "@svgr/webpack": "5.5.0",
+    "clsx": "1.1.1",
+    "file-loader": "6.2.0",
     "my-loaders": "file:plugins/my-loaders",
-    "postcss": "^8.2.8",
-    "postcss-import": "^12.0.0",
-    "postcss-preset-env": "^6.7.0",
-    "prism-react-renderer": "^1.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "postcss": "8.3.8",
+    "postcss-import": "12.0.0",
+    "postcss-preset-env": "6.7.0",
+    "prism-react-renderer": "1.2.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "tailwind-loader": "file:plugins/tailwind-loader",
-    "url-loader": "^4.1.1"
+    "url-loader": "4.1.1"
   },
   "devDependencies": {
-    "postcss-loader": "^4.2.0",
+    "postcss-loader": "5.3.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "browserslist": {
