apply suggestions from code review

--- a/packages/website/src/pages/showcase-projects.json
+++ b/packages/website/src/pages/showcase-projects.json
@@ -231,7 +231,7 @@
   },
   {
     "name": "Prismic",
-    "image": "img/logos/prismic.svg",
+    "image": "img/logos/prismic.png",
     "href": "https://prismic.io/docs"
   },
   {
