--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   command="yarn run website:build"
   publish="packages/website/build"
+  ignore="git diff --quiet $COMMIT_REF $CACHED_COMMIT_REF -- packages/website/"
 
 [build.environment]
   YARN_VERSION = "1.22.5"
