--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "@types/jest-diff": "^24.3.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "2.19.0",
-    "@typescript-eslint/parser": "2.19.0",
+    "@typescript-eslint/eslint-plugin": "5.2.0",
+    "@typescript-eslint/parser": "5.2.0",
     "algoliasearch": "4.10.3",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.1.0",
@@ -67,21 +67,23 @@
     "cssnano": "4.1.10",
     "cypress": "6.4.0",
     "dotenv": "8.2.0",
-    "eslint": "6.8.0",
+    "eslint": "7.32.0",
     "eslint-config-algolia": "19.0.2",
-    "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-cypress": "2.11.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-jest": "23.20.0",
-    "eslint-plugin-prettier": "3.1.4",
-    "eslint-plugin-react": "7.20.6",
-    "eslint-plugin-react-hooks": "2.3.0",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-jest": "25.2.2",
+    "eslint-plugin-jsdoc": "37.0.3",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "7.26.1",
+    "eslint-plugin-react-hooks": "4.2.0",
     "jest": "26.4.2",
     "jest-watch-typeahead": "0.6.0",
     "lerna": "4.0.0",
     "postcss": "7.0.36",
-    "prettier": "2.1.1",
+    "prettier": "2.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rollup": "1.31.0",
@@ -92,14 +94,14 @@
     "rollup-plugin-terser": "5.2.0",
     "shipjs": "0.23.0",
     "start-server-and-test": "1.11.3",
-    "stylelint": "13.7.0",
+    "stylelint": "14.0.1",
     "stylelint-a11y": "1.2.3",
-    "stylelint-config-prettier": "8.0.2",
-    "stylelint-config-sass-guidelines": "7.0.0",
-    "stylelint-config-standard": "20.0.0",
-    "stylelint-no-unsupported-browser-features": "4.0.0",
-    "stylelint-order": "4.1.0",
-    "stylelint-prettier": "1.1.2",
+    "stylelint-config-prettier": "9.0.3",
+    "stylelint-config-sass-guidelines": "9.0.0",
+    "stylelint-config-standard": "23.0.0",
+    "stylelint-no-unsupported-browser-features": "5.0.2",
+    "stylelint-order": "5.0.0",
+    "stylelint-prettier": "1.2.0",
     "typescript": "4.1.2",
     "watch": "1.0.2",
     "webpack": "4.44.1"
