--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,6 +1,7 @@
 {
-  "extends": "../../tsconfig",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
     "types": ["cypress"]
-  }
+  },
+  "exclude": []
 }
