--- a/package.json
+++ b/package.json
@@ -47,9 +47,10 @@
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "7.1.1",
     "@rollup/plugin-replace": "2.3.3",
-    "@testing-library/dom": "7.23.0",
+    "@testing-library/dom": "8.11.0",
     "@testing-library/jest-dom": "5.15.0",
-    "@testing-library/user-event": "12.1.3",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/user-event": "13.5.0",
     "@types/jest": "^27.0.0",
     "@types/jest-diff": "^24.3.0",
     "@types/react": "^17.0.0",
@@ -102,6 +103,7 @@
     "stylelint-no-unsupported-browser-features": "5.0.2",
     "stylelint-order": "5.0.0",
     "stylelint-prettier": "2.0.0",
+    "ts-jest": "27.0.7",
     "typescript": "4.5.2",
     "watch": "1.0.2",
     "webpack": "4.44.1"
