Add Buf to showcase projects

--- a/packages/website/src/components/showcase-projects.json
+++ b/packages/website/src/components/showcase-projects.json
@@ -243,5 +243,10 @@
     "name": "Vite",
     "image": "img/logos/vite.svg",
     "href": "https://vitejs.dev/"
+  },
+  {
+    "name": "Buf",
+    "image": "img/logos/buf.png",
+    "href": "https://docs.buf.build"
   }
 ]
