--- a/examples/demo/package.json
+++ b/examples/demo/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@docsearch/react-example",
   "description": "DocSearch v3 React example",
-  "version": "3.0.0-alpha.50",
+  "version": "3.0.0",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -9,8 +9,8 @@
     "start": "parcel index.html"
   },
   "dependencies": {
-    "@docsearch/css": "3.0.0-alpha.50",
-    "@docsearch/react": "3.0.0-alpha.50",
+    "@docsearch/css": "3.0.0",
+    "@docsearch/react": "3.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
