--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "packages": ["packages/*", "examples/*"],
-  "version": "3.0.0-alpha.50",
+  "version": "3.0.0",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
