--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@docsearch/website",
-  "version": "3.0.0-alpha.50",
+  "version": "3.0.0",
   "private": true,
   "homepage": "https://docsearch.algolia.com/",
   "scripts": {
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@algolia/ui-library": "4.0.0-beta.71",
-    "@docsearch/react": "3.0.0-alpha.50",
+    "@docsearch/react": "3.0.0",
     "@docusaurus/core": "2.0.0-beta.15",
     "@docusaurus/preset-classic": "2.0.0-beta.15",
     "@mdx-js/react": "1.6.22",
