--- a/packages/docsearch-react/package.json
+++ b/packages/docsearch-react/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@algolia/autocomplete-core": "1.5.2",
     "@algolia/autocomplete-preset-algolia": "1.5.2",
+    "@algolia/client-search": "^4.12.2",
     "@docsearch/css": "3.0.0",
     "algoliasearch": "^4.0.0"
   },
