--- a/packages/website/src/components/showcase-projects.json
+++ b/packages/website/src/components/showcase-projects.json
@@ -243,5 +243,10 @@
     "name": "Vite",
     "image": "img/logos/vite.svg",
     "href": "https://vitejs.dev/"
+  },
+  {
+    "name": "Flowbite",
+    "image": "img/logos/flowbite.svg",
+    "href": "https://flowbite.com/docs/getting-started/introduction/"
   }
 ]
