--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
     "build": "lerna run build --scope @docsearch/*",
     "cy:clean": "rm -rf cypress/screenshots",
     "cy:info": "cypress info",
-    "cy:record": "percy exec -- cypress run --spec 'cypress/integration/**/*' --headless --record",
     "cy:run:chrome": "yarn run cy:run --browser chrome",
     "cy:run:edge": "yarn run cy:run --browser edge",
     "cy:run:firefox": "yarn run cy:run --browser firefox",
-    "cy:run": "start-server-and-test doc:test http://localhost:3000 cy:record",
+    "cy:run": "start-server-and-test 'yarn website:test' http://localhost:3000 'cypress run --spec 'cypress/integration/**/*' --headless'",
     "cy:verify": "cypress verify",
     "lint:css": "stylelint **/src/**/*.css",
     "lint": "eslint --ext .js,.ts,.tsx .",
@@ -36,25 +35,25 @@
     "test": "jest",
     "watch": "lerna run watch --parallel --scope @docsearch/*",
     "website:build": "yarn workspace @docsearch/website build",
-    "website:start": "yarn workspace @docsearch/website start --host 0.0.0.0"
+    "website:start": "yarn workspace @docsearch/website start --host 0.0.0.0",
+    "website:test": "yarn workspace @docsearch/website start --no-open"
   },
   "devDependencies": {
     "@babel/cli": "7.16.7",
     "@babel/plugin-transform-react-jsx": "7.16.7",
     "@babel/preset-env": "7.16.7",
     "@babel/preset-typescript": "7.16.7",
-    "@percy/cypress": "2.3.4",
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "7.1.1",
     "@rollup/plugin-replace": "2.3.3",
     "@testing-library/dom": "8.11.3",
     "@testing-library/jest-dom": "5.16.2",
-    "@testing-library/react": "12.1.4",
+    "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "13.5.0",
     "@types/jest": "^27.0.0",
     "@types/jest-diff": "^24.3.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "5.14.0",
     "@typescript-eslint/parser": "5.14.0",
     "algoliasearch": "4.11.0",
@@ -66,7 +65,7 @@
     "concurrently": "5.3.0",
     "cross-env": "7.0.2",
     "cssnano": "4.1.10",
-    "cypress": "9.2.0",
+    "cypress": "9.6.0",
     "dotenv": "16.0.0",
     "eslint": "8.10.0",
     "eslint-config-algolia": "20.0.0",
@@ -85,8 +84,8 @@
     "lerna": "4.0.0",
     "postcss": "8.4.5",
     "prettier": "2.5.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "rollup": "1.31.0",
     "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-commonjs": "10.1.0",
