--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,11 @@ aliases:
   - &restore_yarn_cache
     name: Restore Yarn cache
     keys:
-      - yarn-{{ .Branch }}-packages-{{ checksum "yarn.lock" }}
+      - yarn-packages-{{ checksum "yarn.lock" }}
 
   - &save_yarn_cache
     name: Save Yarn cache
-    key: yarn-{{ .Branch }}-packages-{{ checksum "yarn.lock" }}
+    key: yarn-packages-{{ checksum "yarn.lock" }}
     paths:
       - ~/.cache/yarn
 
@@ -101,10 +101,12 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+      - *attach_workspace
       - run: *install_yarn_version
       - restore_cache: *restore_yarn_cache
       - run: *run_yarn_install
       - save_cache: *save_yarn_cache
+      - run: *restore_dist_folders
       - run:
           name: Type checking
           command: yarn run test:types
@@ -112,10 +114,12 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+      - *attach_workspace
       - run: *install_yarn_version
       - restore_cache: *restore_yarn_cache
       - run: *run_yarn_install
       - save_cache: *save_yarn_cache
+      - run: *restore_dist_folders
       - run:
           name: Unit tests
           command: yarn run test --maxWorkers=4
@@ -123,10 +127,12 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+      - *attach_workspace
       - run: *install_yarn_version
       - restore_cache: *restore_yarn_cache
       - run: *run_yarn_install
       - save_cache: *save_yarn_cache
+      - run: *restore_dist_folders
       - run:
           name: Release if needed
           command: yarn run shipjs trigger
@@ -134,10 +140,12 @@ jobs:
     <<: *cypress
     steps:
       - checkout
+      - *attach_workspace
       - run: *install_yarn_version
       - restore_cache: *restore_yarn_cache
       - run: *run_yarn_install
       - save_cache: *save_yarn_cache
+      - run: *restore_dist_folders
       - run:
           name: Cypress test Actions
           command: yarn run cy:run
@@ -150,10 +158,18 @@ workflows:
       - test_lint:
           requires:
             - build
-      - test_types
-      - test_unit
-      - test_cypress
+      - test_types:
+          requires:
+            - build
+      - test_unit:
+          requires:
+            - build
+      - test_cypress:
+          requires:
+            - build
       - release:
+          requires:
+            - build
           filters:
             branches:
               only: next
