--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "cy:verify": "cypress verify",
     "lint:css": "stylelint **/src/**/*.css",
     "lint": "eslint --ext .js,.ts,.tsx .",
-    "prepare": "lerna run prepare",
     "playground:start": "yarn workspace @docsearch/react-example start",
     "playground-js:start": "yarn workspace @docsearch/js-example start",
     "release": "shipjs prepare",
@@ -61,38 +60,39 @@
     "babel-loader": "8.2.3",
     "babel-plugin-inline-replace-variables": "1.3.1",
     "babel-plugin-module-resolver": "4.0.0",
-    "bundlesize": "0.18.0",
+    "bundlesize": "0.18.1",
     "concurrently": "5.3.0",
-    "cross-env": "7.0.2",
+    "cross-env": "7.0.3",
     "cssnano": "4.1.10",
-    "cypress": "9.6.0",
-    "dotenv": "16.0.0",
-    "eslint": "8.10.0",
+    "cypress": "9.6.1",
+    "dotenv": "16.0.1",
+    "eslint": "8.15.0",
     "eslint-config-algolia": "20.0.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-jest": "26.1.1",
-    "eslint-plugin-jsdoc": "37.9.7",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jest": "26.2.2",
+    "eslint-plugin-jsdoc": "39.2.9",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.29.3",
-    "eslint-plugin-react-hooks": "4.3.0",
-    "jest": "27.5.1",
-    "jest-watch-typeahead": "1.0.0",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.5.0",
+    "jest": "28.1.0",
+    "jest-environment-jsdom": "28.1.0",
+    "jest-watch-typeahead": "1.1.0",
     "lerna": "4.0.0",
     "postcss": "8.4.5",
     "prettier": "2.5.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "rollup": "1.31.0",
+    "rollup": "1.32.1",
     "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-filesize": "9.1.2",
-    "rollup-plugin-license": "2.6.1",
+    "rollup-plugin-license": "2.7.0",
     "rollup-plugin-terser": "7.0.2",
-    "shipjs": "0.24.3",
+    "shipjs": "0.24.4",
     "start-server-and-test": "1.11.3",
     "stylelint": "14.5.3",
     "stylelint-a11y": "1.2.3",
@@ -102,8 +102,8 @@
     "stylelint-no-unsupported-browser-features": "5.0.2",
     "stylelint-order": "5.0.0",
     "stylelint-prettier": "2.0.0",
-    "ts-jest": "27.1.3",
-    "typescript": "4.6.2",
+    "ts-jest": "28.0.2",
+    "typescript": "4.6.4",
     "watch": "1.0.2",
     "webpack": "4.44.1"
   }
