--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command="yarn run website:build"
+  command="yarn build"
   publish="packages/website/build"
   ignore="git diff --quiet $COMMIT_REF $CACHED_COMMIT_REF -- packages/website/"
 
