--- a/packages/docsearch-js/package.json
+++ b/packages/docsearch-js/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "build:clean": "rm -rf ./dist",
     "build:esm": "cross-env BUILD=esm rollup --config",
-    "build:types": "tsc -p ./tsconfig.declaration.json --outFile ./dist/esm/index.d.ts",
+    "build:types": "tsc -p ./tsconfig.declaration.json --outDir ./dist/esm",
     "build:umd": "cross-env BUILD=umd rollup --config",
     "build": "yarn build:clean && yarn build:umd && yarn build:esm && yarn build:types",
     "on:change": "concurrently \"yarn build:esm\" \"yarn build:types\"",
