--- a/examples/js-demo/package.json
+++ b/examples/js-demo/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@docsearch/css": "3.1.0",
-    "@docsearch/js": "3.1.0"
+    "@docsearch/js": "3.1.0",
+    "parcel": "2.6.0"
   },
   "devDependencies": {
-    "parcel": "2.0.0-beta.2"
+    "typescript": "4.6.4"
   }
 }
