Fix trailing comma.

--- a/packages/website/src/components/showcase-projects.json
+++ b/packages/website/src/components/showcase-projects.json
@@ -252,6 +252,6 @@
   {
     "name": "Flowbite",
     "image": "img/logos/flowbite.svg",
-    "href": "https://flowbite.com/docs/getting-started/introduction/",
+    "href": "https://flowbite.com/docs/getting-started/introduction/"
   }
 ]
