--- a/packages/website/src/components/showcase-projects.json
+++ b/packages/website/src/components/showcase-projects.json
@@ -252,6 +252,6 @@
   {
     "name": "Remix",
     "image": "img/logos/remix.svg",
-    "href": "https://remix.run"
+    "href": "https://remix.run/docs"
   }
 ]
