docs: add "Flowbite" to showcase projects. (#1359)
Co-authored-by: Clément Vannicatte <vannicattec@gmail.com>

--- a/packages/website/src/components/showcase-projects.json
+++ b/packages/website/src/components/showcase-projects.json
@@ -248,5 +248,10 @@
     "name": "Markdoc",
     "image": "img/logos/markdoc.svg",
     "href": "https://markdoc.io/"
+  },
+  {
+    "name": "Flowbite",
+    "image": "img/logos/flowbite.svg",
+    "href": "https://flowbite.com/docs/getting-started/introduction/"
   }
 ]
