docs(website): Material UI is now MUI
On 2021-09-16, they announced their rebranding:
https://mui.com/blog/material-ui-is-now-mui/

SVG source: https://github.com/mui/material-ui/blob/49663a8e03f47cb3e55832b1b1ba785c21578bfb/docs/public/static/logo.svg

Signed-off-by: Takuya Noguchi <takninnovationresearch@gmail.com>

--- a/packages/website/src/components/showcase-projects.json
+++ b/packages/website/src/components/showcase-projects.json
@@ -5,8 +5,8 @@
     "href": "https://getbootstrap.com/docs/5.1/getting-started/introduction/"
   },
   {
-    "name": "Material UI",
-    "image": "img/logos/material-ui.svg",
+    "name": "MUI",
+    "image": "img/logos/mui.svg",
     "href": "https://mui.com"
   },
   {
