ADD: Fylgja to project showcase

--- a/packages/website/src/components/showcase-projects.json
+++ b/packages/website/src/components/showcase-projects.json
@@ -258,5 +258,10 @@
     "name": "Flowbite",
     "image": "img/logos/flowbite.svg",
     "href": "https://flowbite.com/docs/getting-started/introduction/"
+  },
+  {
+    "name": "Fylgja",
+    "image": "img/logos/fylgja.svg",
+    "href": "https://fylgja.dev/"
   }
 ]
