fix(website): Update Bootstrap logo and website
Signed-off-by: Takuya Noguchi <takninnovationresearch@gmail.com>

--- a/packages/website/src/components/showcase-projects.json
+++ b/packages/website/src/components/showcase-projects.json
@@ -1,8 +1,8 @@
 [
   {
     "name": "Bootstrap",
-    "image": "img/logos/bootstrap.jpg",
-    "href": "https://getbootstrap.com/docs/5.1/getting-started/introduction/"
+    "image": "img/logos/bootstrap.svg",
+    "href": "https://getbootstrap.com/docs/5.2/getting-started/introduction/"
   },
   {
     "name": "MUI",
