--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "babel-loader": "8.2.5",
     "babel-plugin-inline-replace-variables": "1.3.1",
     "babel-plugin-module-resolver": "4.0.0",
-    "bundlesize": "0.18.1",
+    "bundlesize2": "0.0.31",
     "concurrently": "5.3.0",
     "cross-env": "7.0.3",
     "cssnano": "4.1.10",
