--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -20,8 +20,8 @@
     "@docsearch/react": "3.1.1",
     "@docusaurus/core": "2.0.0-rc.1",
     "@docusaurus/preset-classic": "2.0.0-rc.1",
-    "@mdx-js/react": "1.6.22",
-    "clsx": "1.1.1",
+    "@mdx-js/react": "^1.6.22",
+    "clsx": "^1.1.1",
     "file-loader": "6.2.0",
     "my-loaders": "file:plugins/my-loaders",
     "postcss": "8.4.5",
