--- a/package.json
+++ b/package.json
@@ -18,10 +18,8 @@
     "build": "lerna run build --scope @docsearch/*",
     "cy:clean": "rm -rf cypress/screenshots",
     "cy:info": "cypress info",
-    "cy:run:chrome": "yarn run cy:run --browser chrome",
-    "cy:run:edge": "yarn run cy:run --browser edge",
-    "cy:run:firefox": "yarn run cy:run --browser firefox",
-    "cy:run": "start-server-and-test 'yarn website:test' http://localhost:3000 'cypress run --spec 'cypress/integration/**/*' --headless'",
+    "cy:run:chrome": "start-server-and-test 'yarn website:test' http://localhost:3000 'cypress run --browser chrome --spec 'cypress/integration/**/*' --headless'",
+    "cy:run:firefox": "start-server-and-test 'yarn website:test' http://localhost:3000 'cypress run --browser firefox --spec 'cypress/integration/**/*' --headless'",
     "cy:verify": "cypress verify",
     "lint:css": "stylelint **/src/**/*.css",
     "lint": "eslint --ext .js,.ts,.tsx .",
