--- a/packages/docsearch-react/package.json
+++ b/packages/docsearch-react/package.json
@@ -42,5 +42,16 @@
     "@types/react": ">= 16.8.0 < 19.0.0",
     "react": ">= 16.8.0 < 19.0.0",
     "react-dom": ">= 16.8.0 < 19.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@types/react": {
+      "optional": true
+    },
+    "react": {
+      "optional": true
+    },
+    "react-dom": {
+      "optional": true
+    }
   }
 }
