fix react playground

--- a/examples/demo/package.json
+++ b/examples/demo/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@docsearch/css": "3.2.1",
     "@docsearch/react": "3.2.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
-    "parcel": "2.0.0-beta.2"
+    "parcel": "2.7.0"
   }
 }
