--- a/examples/js-demo/package.json
+++ b/examples/js-demo/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "parcel build index.html",
-    "start": "parcel index.html --port 3000"
+    "start": "parcel index.html --port 3000 --no-cache"
   },
   "dependencies": {
     "@docsearch/css": "3.3.1",
