--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "cy:run:chrome": "yarn run cy:run --browser chrome",
     "cy:run:edge": "yarn run cy:run --browser edge",
     "cy:run:firefox": "yarn run cy:run --browser firefox",
-    "cy:run": "start-server-and-test 'yarn playground-js:start' http://localhost:3000 'cypress run --spec 'cypress/integration/**/*' --headless'",
+    "cy:run": "start-server-and-test 'yarn playground:start' http://localhost:3000 'cypress run --spec 'cypress/integration/**/*' --headless'",
     "cy:verify": "cypress verify",
     "lint:css": "stylelint **/src/**/*.css",
     "lint": "eslint --ext .js,.ts,.tsx .",
