--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "cy:run:chrome": "yarn run cy:run --browser chrome",
     "cy:run:edge": "yarn run cy:run --browser edge",
     "cy:run:firefox": "yarn run cy:run --browser firefox",
-    "cy:run": "start-server-and-test 'yarn playground:start' http://localhost:3000 'cypress run --spec 'cypress/integration/**/*' --headless'",
+    "cy:run": "start-server-and-test 'yarn playground:cypress' http://localhost:3000 'cypress run --spec 'cypress/integration/**/*' --headless'",
     "cy:verify": "cypress verify",
     "lint:css": "stylelint **/src/**/*.css",
     "lint": "eslint --ext .js,.ts,.tsx .",
+    "playground:cypress": "yarn workspace @docsearch/cypress start",
     "playground:start": "yarn workspace @docsearch/react-example start",
     "playground-js:start": "yarn workspace @docsearch/js-example start",
     "release": "shipjs prepare",
