--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:esm": "lerna run build:esm --scope @docsearch/*",
     "build:types": "lerna run build:types --scope @docsearch/*",
     "build:umd": "lerna run build:umd --scope @docsearch/*",
-    "build": "lerna run build --scope @docsearch/*",
+    "build": "lerna run build --scope @docsearch/* --ignore '@docsearch/@(cypress|react-example|js-example)'",
     "cy:clean": "rm -rf cypress/screenshots",
     "cy:info": "cypress info",
     "cy:run:chrome": "yarn run cy:run --browser chrome",
