--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
     "@babel/plugin-transform-react-jsx": "7.19.0",
     "@babel/preset-env": "7.19.4",
     "@babel/preset-typescript": "7.18.6",
-    "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "7.1.1",
-    "@rollup/plugin-replace": "2.3.3",
+    "@rollup/plugin-babel": "6.0.3",
+    "@rollup/plugin-commonjs": "24.0.0",
+    "@rollup/plugin-json": "6.0.0",
+    "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-replace": "5.0.2",
+    "@rollup/plugin-terser": "0.2.1",
     "@testing-library/dom": "8.18.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
@@ -86,12 +89,9 @@
     "prettier": "2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "rollup": "1.32.1",
-    "rollup-plugin-babel": "4.4.0",
-    "rollup-plugin-commonjs": "10.1.0",
+    "rollup": "3.9.0",
     "rollup-plugin-filesize": "9.1.2",
-    "rollup-plugin-license": "3.0.0",
-    "rollup-plugin-terser": "7.0.2",
+    "rollup-plugin-license": "3.0.1",
     "shipjs": "0.24.4",
     "start-server-and-test": "1.11.3",
     "stylelint": "14.14.0",
