--- a/packages/docsearch-react/package.json
+++ b/packages/docsearch-react/package.json
@@ -27,7 +27,7 @@
     "build:clean": "rm -rf ./dist",
     "build:esm": "babel src --root-mode upward --extensions '.ts,.tsx' --out-dir dist/esm",
     "build:types": "tsc -p ./tsconfig.declaration.json --outDir ./dist/esm",
-    "build:umd": "rollup --config",
+    "build:umd": "rollup  -c rollup.config.mjs",
     "build": "yarn build:clean && yarn build:umd && yarn build:esm && yarn build:types",
     "on:change": "concurrently \"yarn build:esm\" \"yarn build:types\"",
     "watch": "watch \"yarn on:change\" --ignoreDirectoryPattern \"/dist/\""
