--- a/packages/docsearch-react/package.json
+++ b/packages/docsearch-react/package.json
@@ -36,12 +36,13 @@
     "@algolia/autocomplete-core": "1.9.3",
     "@algolia/autocomplete-preset-algolia": "1.9.3",
     "@docsearch/css": "3.5.1",
-    "algoliasearch": "^4.0.0"
+    "algoliasearch": "^4.19.1"
   },
   "peerDependencies": {
     "@types/react": ">= 16.8.0 < 19.0.0",
     "react": ">= 16.8.0 < 19.0.0",
-    "react-dom": ">= 16.8.0 < 19.0.0"
+    "react-dom": ">= 16.8.0 < 19.0.0",
+    "search-insights": ">= 1 < 3"
   },
   "peerDependenciesMeta": {
     "@types/react": {
@@ -51,6 +52,9 @@
       "optional": true
     },
     "react-dom": {
+      "optional": true
+    },
+    "search-insights": {
       "optional": true
     }
   }
