--- a/packages/docsearch-js/package.json
+++ b/packages/docsearch-js/package.json
@@ -13,6 +13,7 @@
   "files": [
     "dist/"
   ],
+  "type": "module",
   "source": "src/index.ts",
   "types": "dist/esm/index.d.ts",
   "module": "dist/esm/index.js",
@@ -20,6 +21,12 @@
   "umd:main": "dist/umd/index.js",
   "unpkg": "dist/umd/index.js",
   "jsdelivr": "dist/umd/index.js",
+  "exports": {
+    "import": {
+      "types": "./dist/esm/index.d.ts",
+      "default": "./dist/esm/index.js"
+    }
+  },
   "scripts": {
     "build:clean": "rm -rf ./dist",
     "build:esm": "cross-env BUILD=esm rollup --config",
