Add React-admin to projects showcase

--- a/packages/website/src/components/showcase-projects.json
+++ b/packages/website/src/components/showcase-projects.json
@@ -253,5 +253,10 @@
     "name": "Fylgja",
     "image": "img/logos/fylgja.svg",
     "href": "https://fylgja.dev/"
+  },
+  {
+    "name": "React-admin",
+    "image": "img/logos/react-admin.svg",
+    "href": "https://marmelab.com/react-admin/"
   }
 ]
